--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
-    <title>SUS DRiP</title>
+    <title>SUS DRIP</title>
 </head>
 
 <body>
@@ -20,11 +20,11 @@
             </a>
 
             <nav class="navbar">
-                <a href="#">Homes</a>
+                <a href="#">HOMES</a>
                 <a href="#games">SUS DRIP</a>
-                <a href="#about">Sobre</a>
-                <a href="#review">Membros</a>
-                <a href="#menu">Jogos</a>
+                <a href="#about">SOBRE</a>
+                <a href="#review">MEMBROS</a>
+                <a href="#menu">JOGOS</a>
             </nav>
 
             <div class="icons">
@@ -152,4 +152,5 @@
 </body>
 
 </html>
+
 
